--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-html-parser": "^6.1.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-router": "^7.0.1",
