--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
+    "@vercel/analytics": "^1.4.1",
     "firebase": "^11.0.2",
     "node-html-parser": "^6.1.13",
     "react": "^18.3.1",
